# ThePilgrimage

./: CMakeLists.txt  README.md  config.cpp  config.h  courseproject.vcxproj  courseproject.vcxproj.filters  enemy.cpp  enemy.h  game.cfg  game.cpp  game.h  item.cpp  item.h  main.cpp  player.cpp  player.h  ГДД_The_Pilgrimage.docx
